    - adds plowmod for manual module updating.
    - debian/rules: install new upstream changelog.
    - debian/NEWS, debian/README: note the new plowmod tool.
    - debian/plowshare.links, debian/plowshare.manpages: add plowmod.
    - debian/plowshare.docs: README -> README.md.

  * debian/gbp.conf, debian/get-version, debian/rules:
    - Remove dependency on git history from the build process.

  * debian/plowshare.completion: install completion for each command.

  * debian/plowshare.links, debian/plowshare.manpages: sort alphabetically.

 -- Carl Suster <carl@contraflo.ws>  Wed, 14 Oct 2015 15:33:28 +0200

plowshare (2.0.1-1) unstable; urgency=medium

  * New upstream release.
    - Removed patches applied upstream (Closes: #780311)

  * Upload to unstable

  * The modules are now split into a separate package plowshare-modules
    - Upstream no longer officially maintains the modules
    - Now just the framework lives in this package
    - Remove the modules which now live in the new package plowshare-modules
    - debian/copyright: remove references to removed files
    - debian/copyright: new upstream location
    - debian/upstream/metadata: new upstream location
    - debian/watch: new upstream location
    - debian/control: new upstream homepage
    - debian/control: explain the separation of code in the description
    - debian/control: recommend the new modules package
    - debian/NEWS: announce the restructuring

  * Rename plowshare4 -> plowshare source and binary to reflect new name
    - debian/control: transitional package to handle the rename
    - debian/copyright: update upstream name

  * debian/rules:
    - Use new bash completion path (Closes: #798806)

 -- Carl Suster <carl@contraflo.ws>  Sat, 26 Sep 2015 14:32:31 +0200

plowshare4 (1.0.5-2) unstable; urgency=high

  * Disable javascript support (Closes: #791467)

 -- Carl Suster <carl@contraflo.ws>  Tue, 14 Jul 2015 18:45:22 +1000

plowshare4 (1.2.0-1) experimental; urgency=medium
